EUW-1630: Innføre connection-error metrics for interne og eksterne api-kall.